<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/header"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_header"
        android:gravity="center" >

        <ImageButton
            android:contentDescription="slsakldlsldslds"
            android:id="@+id/button_about"
            style="@style/button"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_about" />

        <TextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/button_about"
            android:text="@string/title"
            android:textColor="#FFF"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/button_exit"
            style="@style/buttonSmall"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_exit" />

        <ImageButton
            android:id="@+id/button_menu"
            style="@style/buttonSmall"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/button_exit"
            android:src="@drawable/ic_menu" />

        <ImageButton
            android:id="@+id/button_rotate"
            style="@style/buttonSmall"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/button_menu"
            android:src="@drawable/ic_rotate" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_footer"
        android:gravity="center"
        android:padding="5dp" >

        <ImageButton
            android:id="@+id/button_shoot"
            style="@style/button"
            android:src="@drawable/ic_shoot" />

        <LinearLayout
            android:id="@+id/buttons_cancel_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/button_cancel"
                style="@style/button"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/button_save"
                style="@style/button"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/button_cancel"
                android:src="@drawable/ic_save" />
        </LinearLayout>
    </RelativeLayout>

    <fi.harism.instacam.InstaCamRenderer
        android:id="@+id/instacam_renderer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/text_brightness"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seekbar_brightness"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_separator" />

        <SeekBar
            android:id="@+id/seekbar_brightness"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="10" />

        <TextView
            android:id="@+id/text_contrast"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/seekbar_contrast"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_separator" />

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="10" />

        <TextView
            android:id="@+id/text_saturation"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/seekbar_saturation"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_separator" />

        <SeekBar
            android:id="@+id/seekbar_saturation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="16" />

        <TextView
            android:id="@+id/text_corner_radius"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/seekbar_corner_radius"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:src="@drawable/bg_separator" />

        <SeekBar
            android:id="@+id/seekbar_corner_radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="10" />
    </LinearLayout>

</RelativeLayout>